src/css/index.css
/* #region Reset */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

body,
h1,
h2,
h3,
h4,
p,
ul {
  margin-block: 0;
}

body {
  min-height: 100vh;
  line-height: 1.5;
}

h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: 1.1;
}

h1,
h2,
h3,
h4 {
  text-wrap: balance;
  font-weight: 400;
  font-variant-numeric: lining-nums;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.8rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.3rem;
}

img,
picture {
  max-width: 100%;
  display: block;
}

input,
button,
textarea,
select {
  font-family: inherit;
  font-size: inherit;
}

textarea:not([rows]) {
  min-height: 10em;
}

.flow > * + *,
.flow > * + astro-island > * {
  margin-block-start: var(--flow-space, 1em);
}

:is(h1, h2, h3, blockquote) {
  --flow-space: 1.5em;
}

:is(h1, h2, h3) + * {
  --flow-space: 0.8em;
}

:is(li) + * {
  --flow-space: 0.5em;
}

:target {
  scroll-margin-block: 5ex;
  animation: TempOutline 5s linear;
}

/* #endregion */

:root,
[data-theme] {
  --token-size: 64px;
  --font-body: var(--font-sorts-mill-goudy), serif;
  --font-title: var(--font-dumbledor), var(--font-sorts-mill-goudy), serif;
  font-family: var(--font-body);

  --border-radius: 0.5rem;
  --panel-resize-handle-size: 3px;

  color-scheme: light dark;

  --color-background: #e6e3da;
  --color-background: light-dark(#e6e3da, #1a1918);
  --color-text: #282828;
  --color-text: light-dark(#282828, #e1e1e1);

  --color-control-background: #f0eee9;
  --color-control-background: light-dark(#f0eee9, #1e1d1b);
  --color-control-background-hover: #ece9e1;
  --color-control-background-hover: light-dark(#ece9e1, #252422);
  --color-control-background-active: #e5dfd1;
  --color-control-background-active: light-dark(#e5dfd1, #272625);

  --color-control-border: #d0c3ab;
  --color-control-border: light-dark(#d0c3ab, #393733);
  --color-control-border-hover: #d8cdb4;
  --color-control-border-hover: light-dark(#d8cdb4, #302f2c);
  --color-control-border-active: #d0c3ab;
  --color-control-border-active: light-dark(#d0c3ab, #393733);

  --color-control-background-error: #e6cdcc;
  --color-control-background-error: light-dark(#e6cdcc, #372625);
  --color-control-border-error: #e4a6a7;
  --color-control-border-error: light-dark(#e4a6a7, #3b2a27);

  --color-header-background: #1d4124;
  --color-header-text: #fdedc9;
  --color-header-paper: #ffffff;
  --color-header-paper: light-dark(#fffdf4, #25241f);

  --color-alignment: var(--color-text);
  --color-alignment-good: #0144a7;
  --color-alignment-good: light-dark(#0144a7, #244b85);
  --color-alignment-evil: #940014;
  --color-alignment-evil: light-dark(#940014, #7c302f);
  --color-alignment-traveller: #5c2b9a;
  --color-alignment-traveller: light-dark(#5c2b9a, #5a3a7a);
  --color-alignment-fabled: #d49303;
  --color-alignment-fabled: light-dark(#d49303, #957138);
  --color-alignment-loric: #80b349;
  --color-alignment-loric: light-dark(#80b349, #66834b);

  --color-level-background: var(--color-text);
  --color-level-border: var(--color-text);

  --color-level-background-error: #e8dad8;
  --color-level-background-error: light-dark(#e8dad8, #332828);
  --color-level-border-error: #c03938;
  --color-level-border-error: light-dark(#c03938, #8b4540);
  --color-level-background-warning: #e8e2cd;
  --color-level-background-warning: light-dark(#e8e2cd, #312c1c);
  --color-level-border-warning: #a88c27;
  --color-level-border-warning: light-dark(#a88c27, #705a02);
  --color-level-background-info: #d6dfe8;
  --color-level-background-info: light-dark(#d6dfe8, #272e35);
  --color-level-border-info: #579ad4;
  --color-level-border-info: light-dark(#579ad4, #286190);

  --color-reminder: var(--color-control-background);
  --color-reminder-border: var(--color-text);
}

[data-theme="light"] {
  color-scheme: light;
}

[data-theme="dark"] {
  color-scheme: dark;
}

@media print {
  :root {
    --color-background: #ffffff;
    --color-text: #000000;
    --color-control-background: #d4d4d4;
    --color-control-background-active: var(--color-background);
    --color-control-border-hover: #cecece;
    --color-control-border-active: #c4c4c4;
  }
}

.visually-hidden-always,
.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.root {
  isolation: isolate;
}

body {
  margin: 0;
  background: url("../assets/paper2.webp") var(--color-background);
  background-blend-mode: multiply;
  color: var(--color-text);
}

@media print {
  body {
    background: unset;
  }
}

a {
  color: inherit;

  &:not(:disabled) {
    cursor: pointer;

    &:hover {
      text-decoration: none;
      opacity: 0.9;
    }

    &:active {
      text-decoration: none;
    }
  }
}

.text-input {
  background-color: var(--color-background);
  border: 2px solid var(--color-control-border-active);
  color: var(--color-text);
  padding: 0.2rem;
  border-radius: 15px;
  width: 100%;
  resize: vertical;

  &:disabled {
    filter: grayscale();
  }

  &:hover {
    border-color: var(--color-control-border-hover);
  }

  &:active {
    border-color: var(--color-control-border-active);
  }
}

.button {
  background-color: var(--color-control-background);
  border: 2px solid var(--color-control-border);
  color: var(--color-text);
  padding: 0.5rem;
  border-radius: 100vw;

  &:disabled {
    filter: grayscale();
  }

  &:hover {
    background-color: var(--color-control-background-hover);
    border-color: var(--color-control-border-hover);
  }

  &:active {
    background-color: var(--color-control-background-active);
    border-color: var(--color-control-border-active);
  }
}

.link-button {
  background-color: transparent;
  border: none;
  padding: 0;
  color: var(--color-text);
  text-decoration: underline;

  &:disabled {
    opacity: 0.7;
  }

  &:not(:disabled) {
    cursor: pointer;

    &:hover {
      text-decoration: none;
      opacity: 0.9;
    }

    &:active {
      text-decoration: none;
    }
  }
}

.icon-button {
  border: none;
  background-color: transparent;
  color: inherit;
}

.inline-icon {
  width: 1em;
  height: 1em;
  vertical-align: sub;
}

.team-townsfolk,
.team-outsider {
  --color-alignment: var(--color-alignment-good);
}

.team-minion,
.team-demon,
.team-tb {
  --color-alignment: var(--color-alignment-evil);
}

.team-traveller,
.team-snv {
  --color-alignment: var(--color-alignment-traveller);
}

.team-fabled,
.team-bmr {
  --color-alignment: var(--color-alignment-fabled);
}

.team-loric,
.team-recent-release {
  --color-alignment: var(--color-alignment-loric);
}

.level-error {
  --color-level-background: var(--color-level-background-error);
  --color-level-border: var(--color-level-border-error);
}

.level-warning {
  --color-level-background: var(--color-level-background-warning);
  --color-level-border: var(--color-level-border-warning);
}

.level-info {
  --color-level-background: var(--color-level-background-info);
  --color-level-border: var(--color-level-border-info);
}

.flow > * + * {
  margin-block-start: var(--flow-space, 1em);
}

:is(h1, h2, h3, blockquote):not(:first-child) {
  --flow-space: 1.5em;
}

:is(h1, h2, h3) + * {
  --flow-space: 0.8em;
}

:is(li) + * {
  --flow-space: 0.5em;
}

.tiny-flow > * {
  --flow-space: 0.5em;
}

.noscript-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  gap: 2rem;
  max-width: 50rem;
  margin: 0 auto;
  padding: 1rem;

  .status-icon {
    width: 96px;
    height: 96px;
  }
}

:where([data-astro-image]) {
  object-fit: var(--fit);
  object-position: var(--pos);
}
:where([data-astro-image="full-width"]) {
  width: 100%;
}
:where([data-astro-image="constrained"]) {
  max-width: 100%;
}

@media print {
  :root {
    font-size: 11px;
  }

  .screen-only {
    display: none !important;
  }
}

@media not print {
  .print-only {
    display: none !important;
  }
}

@media (max-width: 599px) {
  .tablet-only:not(.mobile-only),
  .desktop-only:not(.mobile-only) {
    display: none !important;
  }
}

@media (min-width: 600px) and (max-width: 950px) {
  .mobile-only:not(.tablet-only),
  .desktop-only:not(.tablet-only) {
    display: none !important;
  }
}

@media (min-width: 960px) {
  .mobile-only:not(.desktop-only),
  .tablet-only:not(.desktop-only) {
    display: none !important;
  }
}

.slow-spin {
  animation: Spin 40s linear infinite;
}

@keyframes Spin {
  0% {
    rotate: 0deg;
  }
  100% {
    rotate: 360deg;
  }
}

@keyframes TempOutline {
  0% {
    outline: 5px auto Highlight;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: 2px;
  }
  100% {
    outline: none;
    outline-offset: 2px;
  }
}

